Source/JavaScriptCore/dfg/DFGJITFinalizer.cpp
@@ -90,7 +90,7 @@ void JITFinalizer::finalizeCommon()
     m_jitCode->optimizeAfterWarmUp(m_plan.codeBlock);
 #endif // ENABLE(FTL_JIT)
     
-    if (m_plan.compilation)
+    if (UNLIKELY(m_plan.compilation))
         m_plan.vm->m_perBytecodeProfiler->addCompilation(m_plan.codeBlock, *m_plan.compilation);
     
     if (!m_plan.willTryToTierUp)
